creusot/tests/should_fail/prusti/snap_eq/call.stderr
error[creusot]: Unsatisfied bound creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>: creusot_contracts::prusti_prelude::SnapEq
 --> call.rs:9:11
  |
9 | #[ensures(my_eq(b, result))]
  |           ^^^^^^^^^^^^^^^^

error: aborting due to previous error

